--- a/route_tests.ipynb
+++ b/route_tests.ipynb
@@ -50,7 +50,7 @@
     "T = 50 # set threshold by hand to avoid installing `mahotas` or\n",
     "       # `scipy.stsci.image` dependencies that have threshold() functions\n",
     "# find connected components\n",
-    "labeled, nr_objects = ndimage.label(edgesf > T) # `dna[:,:,0]>T` for red-dot case\n",
+    "labeled, nr_objects = ndimage.label(edgesf > T) \n",
     "print(\"Number of objects is %d \" % nr_objects)\n",
     "\n"
    ]
